@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-20T01:48:06Z",
+  "timestamp" : "2022-10-20T08:25:07Z",
   "count_outdated" : 591,
   "uniques_outdated" : 338,
-  "count" : 628,
-  "uniques" : 360,
+  "count" : 629,
+  "uniques" : 361,
   "clones" : [
     {
       "timestamp": "2022-10-09T00:00:00Z",
@@ -79,6 +79,13 @@
       "timestamp": "2022-10-19T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
