@@ -1,5 +1,5 @@
 {
-  "count": 37,
+  "count": 38,
   "uniques": 12,
   "clones": [
     {
@@ -55,6 +55,11 @@
     {
       "timestamp": "2022-10-19T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-10-20T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
